2005-12-15 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsBSDDB.py: added delete support for the 
	reference_map

2005-12-15 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsBSDDB.py: implemented get_backlink_handles that uses 
	the reference_map index, _update_reference_map that populates 
	the reference_map and supporting code.
	* src/GrampsDbBase.py: added hooks to update reference_map when
	primary objects are commited.

2005-12-15 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsDbBase.py: in preparation for new reference_map, 
	added a sequencial scan implementation of get_backlink_handles 
	method that will work on all backends.

2005-12-14  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsBSDDB.py: Rename upgrade to avoid collision; add DB
	upgrade routine; require DB to be at least version 5 (gramps
	2.0.0); separate primary and secondary load (may need to reverse
	later).
	* src/GrampsDbBase.py: Rename upgrade to avoid collission.
	* src/RelLib.py (Witness.py): Add empty class to enable upgrades
	from the earlier DB versions.
	* src/ViewManager.py: move upgrade into the DB class (may need to
	reverse later).

2005-12-14  Don Allingham  <don@gramps-project.org>
	* src/DisplayState.py: start of Windows menu
	* src/ReadGedcom.py: sync database with transaction
	* src/ViewManager.py: WinMenu support

2005-12-14  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/gramps.glade: Fix Tip of the day

2005-12-13  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayState.py: Correct and add comments.
	* src/EditPerson.py: Call child editors with new arguments.
	* src/EventEdit.py: Use new window management.
	* src/ListBox.py: Use new arguments.
	* src/PersonView.py: Add track argument to EditPerson.

2005-12-13  Don Allingham  <don@gramps-project.org>
	* src/EditPerson.py: fix after merge
	* src/GrampsDbBase.py: fix after merge
	* src/edit_person.glade: fix after merge

2005-12-12  Alex Roitman  <shura@gramps-project.org>